--- a/app/globals.css
+++ b/app/globals.css
@@ -10,3 +10,20 @@ body {
   @apply text-white;
   background-image: linear-gradient(to bottom, var(--primary), #b38d5f);
 }
+
+@layer components {
+  .text-gra-1 {
+    background: linear-gradient(180deg, #f8ce86 0%, #b6814a 100%),
+      linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .text-sha-1 {
+    filter: drop-shadow(0px 6px 4px #000000);
+  }
+
+  .btn-1 {
+    background: linear-gradient(to bottom, #282828, #b6814a);
+  }
+}
