--- a/app/globals.css
+++ b/app/globals.css
@@ -7,11 +7,13 @@
 }
 
 body {
-  @apply text-white;
-  background-image: linear-gradient(to bottom, var(--primary), #b38d5f);
+  @apply text-white bg-gra-1;
 }
 
 @layer components {
+  .bg-gra-1 {
+    background-image: linear-gradient(to bottom, var(--primary), #b38d5f);
+  }
   .text-gra-1 {
     background: linear-gradient(180deg, #f8ce86 0%, #b6814a 100%),
       linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
